Anden opdatering (lidt hygge css på attractions.html)

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -9,13 +9,12 @@
 
 <header class="item1">
     <h1><b>TOURISTGUIDE</b></h1>
-    <p>Explore Denmark’s top attractions and hidden gems. <br>
+    <p class="pForside">Explore Denmark’s top attractions and hidden gems. <br>
         Whether you’re a family, couple, or nature lover, our guide helps you find the perfect experiences for your
         journey. </p>
 </header>
 
 <div class="container">
-
 
     <br>
     <div class="item2">
@@ -24,7 +23,7 @@
     </div>
     <br>
     <div class="item3">
-        <p> When you need to find your way around the city, you can use Rejseplanen <br>
+        <p class="pForside"> When you need to find your way around the city, you can use Rejseplanen <br>
             You will find the link to the website <a
                     href="https://www.rejseplanen.dk/webapp/#!P|TP!histId|0!histKey|H195305">by clicking here</a>
         </p>
@@ -42,8 +41,6 @@
     <br>
     <br>
     <br>
-
-
     <div class="item4">
         <a href="/attraction/all">See all atractions</a>
         <nav>
