--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Tourist Attractions</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
 
@@ -49,6 +49,8 @@
                 <li><a href="/attraction/FCKstadion"> Here you can read about Parken </a></li>
                 <li><a href="/attraction/Bibliotek"> Here you can read about Copenhagen library </a></li>
                 <li><a href="/attraction/EK"> Here you can read about EK </a></li>
+                <br>
+                <li><a href="attraction/add"> Here you can add an attraction</a></li>
             </ul>
         </nav>
     </div>
