--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,19 +7,21 @@
 </head>
 <body>
 
-<header class="item1">
-    <h1><b>TOURISTGUIDE</b></h1>
-    <p class="pForside">Explore Denmark’s top attractions and hidden gems. <br>
-        Whether you’re a family, couple, or nature lover, our guide helps you find the perfect experiences for your
-        journey. </p>
+<header>
+    <h1 class="title"> <b>TOURISTGUIDE</b></h1>
 </header>
+
+<p class="pForside">Explore Denmark’s top attractions and hidden gems. <br>
+    Whether you’re a family, couple, or nature lover, our guide helps you find the perfect experiences for your
+    journey. </p>
 
 <div class="container">
 
     <br>
+    <!--
     <div class="item2">
         <img src="https://www.wonderfulcopenhagen.com/sites/wonderfulcopenhagen.com/files/styles/hero/public/2023-08/Tivoli_2_Photographer_Tivoli.jpg?h=1a07fb32&itok=_zchJCdd"
-             alt="" width="300" height="150">
+             alt="" width="300" height="150"> -->
     </div>
     <br>
     <div class="item3">
@@ -33,10 +35,12 @@
         <a href="/attraction/all">See all atractions</a>
         <nav>
             <ul class="myUL">
+
                 <li><a href="/attraction/Tivoli"> Here you can read about Tivoli </a></li>
                 <li><a href="/attraction/FCKstadion"> Here you can read about Parken </a></li>
                 <li><a href="/attraction/Bibliotek"> Here you can read about Copenhagen library </a></li>
                 <li><a href="/attraction/EK"> Here you can read about EK </a></li>
+
                 <br>
                 <li><a href="attraction/add"> Here you can add an attraction</a></li>
 
